Add all functionality to this program. Look through it to understand it.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     <input type="text" id="userSentence">
                     <button type="submit">Generate!</button>
                 </form>
+                <div id="resultingSentence"></div>
             </div>
         </div>
     </div>
